--- a/.semaphore/deploy-production.yml
+++ b/.semaphore/deploy-production.yml
@@ -1,6 +1,6 @@
 # This pipeline runs after docker-build.yml
 version: v1.0
-name: Deploy to production
+name: Deploy to production (Google Cloud)
 agent:
   machine:
     type: e1-standard-2
