--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -27,6 +27,8 @@ blocks:
       jobs:
         - name: bundle install
           commands:
+            # Ensure correct version of Ruby is used
+            - sem-version ruby 2.7.3
             # Checkout code from Git repository. This step is mandatory if the
             # job is to work with your code.
             # Optionally you may use --use-cache flag to avoid roundtrip to
@@ -48,6 +50,7 @@ blocks:
       jobs:
         - name: rspec
           commands:
+            - sem-version ruby 2.7.3
             - checkout
             - cache restore
             # Bundler requires `install` to run even though cache has been
@@ -66,7 +69,5 @@ blocks:
 # For more on such options, see:
 # https://docs.semaphoreci.com/article/50-pipeline-yaml#promotions
 promotions:
-  - name: Dockerize
+  - name: Dockerize (Gcloud)
     pipeline_file: docker-build.yml
-    auto_promote_on:
-      - result: passed
