use Semaphore Container Registry for CI build

--- a/.semaphore/docker-build.yml
+++ b/.semaphore/docker-build.yml
@@ -26,7 +26,7 @@ blocks:
 
           - checkout
 
-          - docker build -t "gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7}" .
+          - docker build -t "gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7}" -f Dockerfile.ci .
           - docker push "gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7}"
 
 promotions:
