--- a/.semaphore/deploy-staging.yml
+++ b/.semaphore/deploy-staging.yml
@@ -1,4 +1,3 @@
-# This pipeline runs after docker-build.yml
 version: v1.0
 name: Deploy to staging (Google Cloud)
 agent:
@@ -11,9 +10,8 @@ blocks:
       secrets:
         - name: google-cloud-stg
       jobs:
-      - name: run deploy
-        commands:
-          - gcloud auth activate-service-account --key-file=.secrets.gcp.json
-          - gcloud auth configure-docker -q
-          # Deploy to Cloud Run, using flags to avoid interactive prompt:
-          - gcloud beta run deploy semaphore-demo-cloud-run-stg --project semaphore2-stg --image gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7} --region us-central1
+        - name: run deploy
+          commands:
+            - gcloud auth activate-service-account --key-file=.secrets.gcp.json
+            - gcloud auth configure-docker -q
+            - 'gcloud beta run deploy semaphore-demo-cloud-run-stg --project semaphore2-stg --image gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7} --region us-central1'
