--- a/.semaphore/docker-build.yml
+++ b/.semaphore/docker-build.yml
@@ -1,40 +1,25 @@
-# This pipeline runs after semaphore.yml
 version: v1.0
 name: Docker build (Google Cloud)
 agent:
   machine:
-    # Use a machine type with more RAM and CPU power for faster container
-    # builds:
     type: e1-standard-4
     os_image: ubuntu1804
 blocks:
   - name: Build
     task:
-      # Mount a secret which defines an authentication key file.
-      # For info on creating secrets, see:
-      # - https://docs.semaphoreci.com/article/66-environment-variables-and-secrets
-      # - https://docs.semaphoreci.com/article/72-google-container-registry-gcr
       secrets:
         - name: google-cloud-stg
       jobs:
-      - name: Docker build
-        commands:
-          # Authenticate using the file injected from the secret
-          - gcloud auth activate-service-account --key-file=.secrets.gcp.json
-          # Configure access to container registry, silence confirmation prompts with -q
-          - gcloud auth configure-docker -q
-
-          - checkout
-
-          - docker build -t "gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7}" -f Dockerfile.ci .
-          - docker push "gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7}"
-
+        - name: Docker build
+          commands:
+            - gcloud auth activate-service-account --key-file=.secrets.gcp.json
+            - gcloud auth configure-docker -q
+            - checkout
+            - 'docker build -t "gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7}" -f Dockerfile.ci .'
+            - 'docker push "gcr.io/semaphore2-stg/semaphore-demo-cloud-run:${SEMAPHORE_GIT_SHA:0:7}"'
 promotions:
-  # Deployment to staging can be trigger manually:
   - name: Deploy to staging
     pipeline_file: deploy-staging.yml
-
-  # Automatically deploy to production on successful builds on master branch:
   - name: Deploy to production
     pipeline_file: deploy-production.yml
     auto_promote_on:
